cmake_minimum_required(VERSION 3.27)
project(CPP_Primer_Plus_Chapter_5)

set(CMAKE_CXX_STANDARD 17)

add_executable(CPP_Primer_Plus_Chapter_5 main.cpp
        head.h
#        05.01_forloop.cpp
#        05.02_num_test.cpp
#        05.03_express.cpp
#        05.04_formore.cpp
        05.05_bigstep.cpp
)
