cmake_minimum_required(VERSION 3.27)
project(CPP_Primer_Plus_Chapter_5)

set(CMAKE_CXX_STANDARD 17)

add_executable(CPP_Primer_Plus_Chapter_5 main.cpp
        head.h

#        05.01_forloop.cpp
#        05.02_num_test.cpp
#        05.03_express.cpp
#        05.04_formore.cpp
#        05.05_bigstep.cpp
#        05.06_forstr1.cpp
#        05.07_plus_one.cpp
#        05.08_block.cpp
#        05.09_forstr2.cpp
#        05.10_equal.cpp
#        05.11_compstr1.cpp
#        05.12_compstr2.cpp
#        05.13_while.cpp
#        05.14_waiting.cpp
#        05.15_dowhile.cpp
#        05.16_textin1.cpp
#        05.17_textin2.cpp
        05.18_textin3.cpp
)
